# NestorKernel

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  README.md  boot.S  contador.c  funcs.S  handlers.c  idt_entry.S  interrupts.c  kern.c  kern0  kern2  kern2.aux  kern2.tex  kern2.toc  stack.S  tasks.S  write.c
lib/: decls.h  interrupts.h  string.c  string.h
